Preprocessed GoEmotions:cleaned data, converted timestamps, removed rows with no emotions.

--- a/notes/sentiment_analysis.ipynb
+++ b/notes/sentiment_analysis.ipynb
@@ -23,7 +23,7 @@
     }
    ],
    "source": [
-    "#opened the csv file then added header as the df didn't have any. Displayed the first 5 columns.\n",
+    "#opened the csv file then added header as the df didn't have any. Displayed the first 5 rows.\n",
     "import pandas as pd\n",
     "df= pd.read_csv(\"../data/training.1600000.processed.noemoticon.csv\", encoding=\"ISO-8859-1\", names=[\"target\",\"ids\",\"date\",\"flag\",\"user\",\"text\"])\n",
     "df.head()\n"
@@ -171,15 +171,15 @@
    "execution_count": 34
   },
   {
- "cell_type": "code",
- "execution_count": null,
- "outputs": [],
- "source": [],
- "metadata": {
-  "collapsed": false
- },
- "id": "cb282f6e0055f7dc"
- }
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "cb282f6e0055f7dc"
+  }
  ],
  "metadata": {
   "kernelspec": {
